--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lerna": "^3.22.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
-    "typescript": "beta"
+    "typescript": "^4.7.1-rc"
   },
   "engines": {
     "node": ">=14.15.0"
