fixup! ci: match jsconfig paths to eslint

--- a/packages/zoe/jsconfig.json
+++ b/packages/zoe/jsconfig.json
@@ -18,9 +18,10 @@
   "include": [
     "contractFacet.js",
     "exported.js",
-    "scripts/**/*.{js,ts}",
-    "src/**/*.{js,ts}",
-    "test/**/*.{js,ts}",
+    "scripts/**/*.js",
+    "src/**/*.js",
+    "src/**/*.ts",
+    "test/**/*.js",
     "tools/**/*.js",
   ],
 }
